test/files/neg/t7299.check
t7299.scala:4: error: functions may not have more than 22 parameters, but 23 given
   val eta1 = f _
              ^
t7299.scala:5: error: functions may not have more than 22 parameters, but 23 given
   val eta2 = g[Any] _
               ^
two errors found
